[gd_scene load_steps=4 format=3 uid="uid://uxejusibc1ep"]

[ext_resource type="Theme" uid="uid://dea4r1m0v77ur" path="res://GlobalAssets/theme.tres" id="1_x3f26"]
[ext_resource type="Script" path="res://Scenes/Upgrade/upgrade_selection.gd" id="2_s4mxn"]
[ext_resource type="Texture2D" uid="uid://hjojmcugu4xu" path="res://GameObjects/Upgrades/RAMChip.png" id="2_su0s1"]

[node name="UpgradeSelection" type="MarginContainer"]
offset_right = 128.0
offset_bottom = 182.0
mouse_filter = 0
theme = ExtResource("1_x3f26")
script = ExtResource("2_s4mxn")
metadata/_edit_group_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0, 0, 0, 0.435294)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_su0s1")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrade"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Stats"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
